--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai>=2.13.0",
     "pillow>=12.0.0",
     "python-dotenv>=1.2.1",
+    "raindrop-ai>=0.0.34",
     "rich>=14.2.0",
     "tinker-cookbook>=0.1.0",
     "websockets>=15.0.1",
