--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "chz>=0.4.0",
     "cuid2>=2.0.1",
     "kernel>=0.23.0",
+    "matplotlib>=3.10.8",
     "openai>=2.13.0",
     "pillow>=12.0.0",
     "python-dotenv>=1.2.1",
