--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,12 @@ dependencies = [
     "raindrop-ai>=0.0.34",
     "rich>=14.2.0",
     "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git",
+    "wandb>=0.23.0",
     "websockets>=15.0.1",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]
-wandb = ["wandb>=0.16.0"]
 
 [project.urls]
 Documentation = "https://docs.onkernel.com"
