--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,11 @@ data/*.jsonl
 data/*.json
 data/screenshots/
 # Note: examples/agent_auth/tasks.jsonl IS tracked (pre-processed task data)
+# Note: examples/agent_auth/tasks_train.jsonl and tasks_eval.jsonl are generated but useful to track
+
+# Training results (large files - keep .gitkeep for directory structure)
+results/*/
+!results/.gitkeep
 
 # Logs
 *.log
